fix conf schedule table sizing issues on mobile

--- a/src/components/Schedule/schedule.module.css
+++ b/src/components/Schedule/schedule.module.css
@@ -29,4 +29,10 @@
       display: block;
       margin-bottom: 15px;
   }
+  .container img {
+    width: 80px;
+  }
+  table {
+    width: 97vw;
+  }
 }
